# yellow-pages

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample_schema.json  templates.py  test_api_calls.py  utils.py
.github/workflows/: deploy-pages.yml
doc/plans/: 2025-03-17-frontend-project-website.md
docs/: README.md
site/: index.html  styles.css
src/: __init__.py  config.py  test_api_calls.py  utils.py
src/indexer/: __init__.py  __main__.py  build.py
src/mcp/: __init__.py  rag.py  server.py
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
website/src/: App.css  App.jsx  BaseLayout.jsx  Index.jsx  index.css
website/src/pages/: AddingToCursor.jsx  DocsLayout.jsx  EnvVars.jsx  QuickStart.jsx  SchemaFormat.jsx
